--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">Наблюдатель</string>
+    <string name="sensors">Датчики</string>
+    <string name="save">Сохранить</string>
+    <string name="search">Поиск</string>
+    <string name="start">Старт</string>
+    <string name="stop">Стоп</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Почта</string>
+    <string name="prompt_password">Пароль</string>
+    <string name="prompt_password2">Повторите пароль</string>
+    <string name="show_password">Показать пароль</string>
+    <string name="action_sign_in">Войти</string>
+    <string name="action_sign_in_short">Введите</string>
+    <string name="error_invalid_email">Неправильный адресс почты</string>
+    <string name="error_invalid_password">Пароль слишком короткий</string>
+    <string name="error_incorrect_password">Неправильный пароль</string>
+    <string name="error_field_required">Это обязательное поле</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
